# anthropic-cli-rs

./: Cargo.toml  README.md
acr/: Cargo.toml
acr/src/: main.rs
anthropic/: Cargo.toml
anthropic/src/: client.rs  constants.rs  lib.rs  models.rs  utils.rs
cli/: Cargo.toml
cli/src/: main.rs
src/: anthropic.rs  main.rs
