[package]
edition = "2021"
license = "MIT"
name = "anthropic-cli-rs"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.16", features = ["derive", "env"]}
dotenvy = "0.15.7"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.125"
tokio = {version = "1", features = ["full"]}
