[package]
edition = "2021"
license = "MIT"
name = "anthropic"
version = "0.1.0"

[dependencies]
base64 = "0.22.1"
infer = {version = "0.16.0", default-features = false}
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["macros"]}

[dev-dependencies]
mockito = "1.5.0"
serde_json = "1.0.127"
